--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
             <nav>
                 <img src="images/logo.png" class="logo">
                 <ul>
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>About</li>
-                    <li><a href="#"></a>Services</li>
-                    <li><a href="#"></a>Portfólio</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfólio</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class="hearder-text">
+                <p>Engenheiro</p>
+                <h1>Oi, Sou <span>Glauber</span><br> Loureiro e sou do Minas</h1>
+            </div>
         </div>
     </div>
 </body>
