--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesone.com/c4254e24a8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -71,16 +73,50 @@
             </div>
         </div>
     </div>
+    <!-- -----------services------------ -->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">Meus Serviços</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iste vel commodi, animi iure quos
+                        unde eos hic nulla quas quam architecto itaque rerum reiciendis quisquam sequi atque!
+                        Necessitatibus, provident.</p>
+                    <a href="#">Ler mais</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-crop-simple"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iste vel commodi, animi iure
+                        quos
+                        unde eos hic nulla quas quam architecto itaque rerum reiciendis quisquam sequi atque!
+                        Necessitatibus, provident.</p>
+                    <a href="#">Ler mais</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store"></i>
+                    <h2>App Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iste vel commodi, animi iure
+                        quos
+                        unde eos hic nulla quas quam architecto itaque rerum reiciendis quisquam sequi atque!
+                        Necessitatibus, provident.</p>
+                    <a href="#">Ler mais</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
 
         function opentab(tabname) {
-            for(tablink of tablinks) {
+            for (tablink of tablinks) {
                 tablink.classList.remove("active-link");
             }
-            for(tabcontent of tabcontents) {
+            for (tabcontent of tabcontents) {
                 tabcontent.classList.remove("active-tab");
             }
             event.currentTarget.classList.add("active-link");
