--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Portfólio Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesone.com/c4254e24a8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -107,8 +109,8 @@
             </div>
         </div>
     </div>
-        <!-- -----------portfolio------------ -->
-     <div id="porfolio">
+    <!-- -----------portfolio------------ -->
+    <div id="porfolio">
         <div class="container">
             <h1 class="sub-title">Meus Trabalhos</h1>
             <div class="work-list">
@@ -116,30 +118,63 @@
                     <img src="images/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>The app connects you yo the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you yo the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>  
+                    </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
-                        <p>The app connects you yo the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you yo the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div> 
+                    </div>
                 </div>
                 <div class="work">
                     <img src="images/work-3.png">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>The app connects you yo the talented people around the world. Download it from play store.</p>
+                        <p>The app connects you yo the talented people around the world. Download it from play store.
+                        </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div> 
+                    </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn">Saiba mais</a>
         </div>
-     </div>
+    </div>
+    <!-- -----------contact------------ -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i>contact@examplo.com</p>
+                    <p><i class="fa-solid fa-square-phone"></i>11234251235819</p>
+                    <div class="social-icons">
+                        <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="images/my-cv.pdf" download class="btn btn2">Curriculo</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Seu Nome" required>
+                        <input type="email" name="email" placeholder="Seu Email" required>
+                        <textarea name="Message" rows="6" placeholder="Seu Messagem"></textarea>
+                        <button type="submit" class="btn btn2">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="copyright">
+            <p>Copyrigt © Denny. Feito por Denny Junio</p>
+        </div> -->
+    </div>
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
